fix all unit testing
